Fix About and Works margin on mobile screen

--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -30,3 +30,9 @@
   margin-top: 3em;
   font-size: 1.75rem;
 }
+
+@media screen and (max-width: 600px) {
+  .card {
+    margin: 0 1rem;
+  }
+}
