--- a/src/components/works/works.module.css
+++ b/src/components/works/works.module.css
@@ -61,7 +61,7 @@
 
 @media screen and (max-width: 600px) {
   .content {
-    margin: 0 0.5rem;
+    margin: 0 1rem;
   }
   .list {
     grid-template-columns: 1fr;
